[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/completed/Modal.png" type="Texture" id=1]
[ext_resource path="res://scenes/completed/Button.png" type="Texture" id=2]
[ext_resource path="res://scenes/completed/ButtonOK.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Bounce"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CompletedModal" type="Node2D"]
z_index = 4096

[node name="Mask" type="ColorRect" parent="."]
margin_left = -12.4725
margin_top = -21.3815
margin_right = 27.5275
margin_bottom = 18.6185
rect_scale = Vector2( 32.76, 18.84 )
color = Color( 0, 0, 0, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modal" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Modal"]
method_call_mode = 1
anims/Bounce = SubResource( 1 )

[node name="BG" type="TextureRect" parent="Modal"]
margin_left = -350.0
margin_top = -300.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Node2D" parent="Modal"]
position = Vector2( 0, 154.802 )
script = ExtResource( 3 )
parent = NodePath("../..")

[node name="ButtonOK" type="TextureRect" parent="Modal/Button"]
margin_left = -150.0
margin_top = -60.0
margin_right = 250.0
margin_bottom = 90.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Modal/Button/ButtonOK" to="Modal/Button" method="_on_pressed"]
[connection signal="mouse_entered" from="Modal/Button/ButtonOK" to="Modal/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Modal/Button/ButtonOK" to="Modal/Button" method="_on_mouse_exited"]
